--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ html, body{
     width: 98%; /* Ajusta el ancho del footer al ancho completo de la pantalla */
   }
 
+
     .main-footer1{  
     position: fixed; /* Fija el footer en la parte inferior de la pantalla */
     bottom: 2%; 
@@ -117,7 +118,7 @@ html, body{
   justify-content: center;
   /* padding: 0%; */
   width: 100%;
-  /* font-size: 90%; */
+  font-size: 110%;
   }
   
   .top-nav ul {
@@ -355,17 +356,17 @@ html, body{
 
     line-height: 1.5em;
   }
-  
 
   .title{
-    font-size: 250%;
+    font-size: 300%;
     /* font-weight: 800;  */
     text-align: center;
-    font-family: 'Poppins', serif;
+    font-family: 'Mate SC', serif;
+    /* 'Poppins', serif; */
     /* font-family:'Poppins',serif; */
     /* "Graduate", serif; */
     /* 'Pangolin', cursive;*/
-    /*"VT323", monospace;/*'Fredericka the Great', cursive;*/
+    /* "VT323", monospace;'Fredericka the Great', cursive;
     /* font-family: 'Jacques Francois Shadow', cursive; */
     /* font-family: 'Caprasimo', cursive; */
     /* font-family: 'Mate SC', serif; */
